--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>pun-tastic-portfolio-palooza</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>Fine stuff's portfolio</title>
+    <meta name="description" content="Mohammad Alsanad's Portfolio" />
+    <meta name="author" content="Mohammad Alsanad" />
 
-    <meta property="og:title" content="pun-tastic-portfolio-palooza" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="Fine stuff's portfolio" />
+    <meta property="og:description" content="Mohammad Alsanad's Portfolio" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
