--- a/index.html
+++ b/index.html
@@ -10,11 +10,14 @@
     <meta property="og:title" content="Fine stuff's portfolio" />
     <meta property="og:description" content="Mohammad Alsanad's Portfolio" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:image" content="" />
+
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+
   </head>
 
   <body>
